Refactor CSS: improve grid styling, fix hover/hit colors, add animations

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="stylesheet.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="stylesheet.css" />
+</head>
+
+<body>
+  <header>
+    <h1>BattleShip Game</h1>
+  </header>
+  <main>
     <div class="buttons-container">
       <div class="ship-length-buttons-container">
         <button id="ship-length-5-button">5-Cell Ship</button>
@@ -39,7 +45,9 @@
         </div>
       </div>
     </div>
+  </main>
 
-    <script type="module" src="battleship.dom.js"></script>
-  </body>
+  <script type="module" src="battleship.dom.js"></script>
+</body>
+
 </html>
