--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>BattleShip Game</h1>
+    <h1>Battleship Game</h1>
   </header>
   <main>
     <div class="buttons-container">
@@ -31,7 +31,7 @@
       <div id="winner-message"></div>
       <div class="start-button-container">
         <button id="start-button">Start</button>
-        <button id="refresh-page-button">Refresh</button>
+        <button id="refresh-page-button">Restart</button>
       </div>
 
       <div class="container">
