add fonts, add music,add effects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
     <p>Made by @lamnhathunghuynh</p>
   </footer>
 
-  <script type="module" src="battleship.dom.js"></script>
+  <script type="module" src="js/battleship.dom.js"></script>
 </body>
 
 </html>
